--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Kabale Online is now OKFO</title>
+      <title>Kabale Online is now OKFO</title>
 
-  <!-- SEO ONLY -->
-  <meta name="description" content="OKFO is Uganda’s trusted platform for local notices, jobs, services, alerts, and community updates. Evolved from Kabale Online." />
-  <meta name="keywords" content="OKFO, Kabale Online, Uganda local notices, jobs in Uganda, community updates Uganda" />
+  <!-- SEO only -->
+  <meta name="description" content="OKFO (The Okay Information) is Uganda’s trusted platform for local notices, jobs, services, and community updates." />
+  <meta name="keywords" content="OKFO, Kabale Online, Uganda notices, jobs in Uganda, local updates Uganda" />
 
   <style>
     :root {
       --bg: #F3F4F6;
-      --text-primary: #111827;
+      --surface: #FFFFFF;
+      --text-main: #111827;
       --text-muted: #6B7280;
       --brand: #2563EB;
-      --surface: #FFFFFF;
       --border: #E5E7EB;
     }
 
@@ -24,106 +24,105 @@
 
     body {
       margin: 0;
-      height: 100vh;
+      min-height: 100svh; /* FIXES mobile footer cut-off */
       background: var(--bg);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
+      display: grid;
+      grid-template-rows: 1fr auto auto;
       overflow: hidden;
     }
 
+    /* CENTER CONTENT */
     .center {
-      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 20px;
+      padding: 24px;
     }
 
-    .logo {
-      font-size: 2.6rem;
+    .brand {
+      font-size: 2.8rem;
       font-weight: 800;
-      letter-spacing: 1px;
       color: var(--brand);
-      margin-bottom: 10px;
+      letter-spacing: 0.5px;
     }
 
-    .tagline {
+    .brand-sub {
+      margin-top: 4px;
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: var(--text-muted);
+      letter-spacing: 0.6px;
+    }
+
+    .message {
+      margin-top: 18px;
+      max-width: 420px;
       font-size: 1rem;
       color: var(--text-muted);
-      max-width: 420px;
+      line-height: 1.5;
     }
 
     .cta {
       margin-top: 28px;
-      padding: 14px 28px;
+      padding: 14px 32px;
       background: var(--brand);
-      color: #fff;
-      border-radius: 10px;
-      font-weight: 600;
+      color: white;
       text-decoration: none;
-      transition: transform 0.15s ease, box-shadow 0.15s ease;
+      font-weight: 600;
+      border-radius: 12px;
     }
 
-    .cta:hover {
-      transform: translateY(-1px);
-      box-shadow: 0 6px 18px rgba(37, 99, 235, 0.3);
-    }
-
-    .redirect-note {
+    /* COUNTDOWN */
+    .redirect {
+      text-align: center;
       font-size: 0.85rem;
       color: var(--text-muted);
-      margin-bottom: 8px;
+      padding-bottom: 6px;
     }
 
+    /* FOOTER */
     footer {
-      width: 100%;
-      padding: 14px 16px;
-      display: flex;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
       gap: 12px;
-      border-top: 1px solid var(--border);
+      padding: 14px;
       background: var(--surface);
+      border-top: 1px solid var(--border);
     }
 
     footer a {
-      flex: 1;
       text-align: center;
-      padding: 10px;
+      padding: 12px;
       font-size: 0.9rem;
-      color: var(--brand);
-      text-decoration: none;
       font-weight: 600;
-      border-radius: 8px;
+      color: var(--brand);
       background: #EFF6FF;
-    }
-
-    footer a:hover {
-      background: #DBEAFE;
+      border-radius: 10px;
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
 
-  <div class="center">
-    <div class="logo">OKFO</div>
-    <div class="tagline">
+  <main class="center">
+    <div class="brand">OKFO</div>
+    <div class="brand-sub">The Okay Information</div>
+
+    <div class="message">
       Kabale Online has evolved into a trusted local notice platform for Uganda.
     </div>
 
     <a href="https://okfo.kabaleonline.com" class="cta">
       Continue to OKFO
     </a>
-  </div>
+  </main>
 
-  <!-- Countdown -->
-  <div class="redirect-note">
-    Auto redirecting in <span id="countdown">8</span>s
+  <div class="redirect">
+    Auto redirecting in <span id="count">8</span>s
   </div>
 
   <footer>
@@ -132,16 +131,15 @@
   </footer>
 
   <script>
-    let seconds = 8;
-    const el = document.getElementById("countdown");
+    let s = 8;
+    const el = document.getElementById("count");
 
-    const timer = setInterval(() => {
-      seconds--;
-      el.textContent = seconds;
-
-      if (seconds <= 0) {
-        clearInterval(timer);
-        window.location.href = "https://okfo.kabaleonline.com";
+    const t = setInterval(() => {
+      s--;
+      el.textContent = s;
+      if (s === 0) {
+        clearInterval(t);
+        location.href = "https://okfo.kabaleonline.com";
       }
     }, 1000);
   </script>
