--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Kabale Online is now OKFO</title>
   <meta name="description" content="OKFO (The Okay Information) is Uganda’s trusted platform for local notices, jobs, services, and community updates." />
   <meta name="keywords" content="OKFO, Kabale Online, Uganda notices, jobs in Uganda, local updates Uganda" />
+<link rel="icon" type="image/png" href="https://okfo.kabaleonline.com/logo/192.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
